crates/csskit_derives/src/test/snapshots/csskit_derives__test__test_parse__parse_enum_variant_all_must_occur_with_optional_fields.snap
---
source: crates/csskit_derives/src/test/test_parse.rs
expression: pretty
---
#[automatically_derived]
impl<'a> ::css_parse::Parse<'a> for ScrollbarGutter {
    fn parse<I>(p: &mut css_parse::Parser<'a, I>) -> css_parse::Result<Self>
    where
        I: ::std::iter::Iterator<Item = ::css_parse::Cursor> + ::std::clone::Clone,
    {
        use css_parse::{Parse, Peek};
        if p.peek::<Ident>() {
            let c = p.peek_n(1);
            match p.to_atom::<CssAtomSet>(c) {
                CssAtomSet::Auto => {
                    let v0 = p.parse::<Ident>()?;
                    return Ok(Self::Auto { 0: v0 });
                }
                _ => {}
            }
        }
        let mut v0: Option<Ident> = None;
        let mut v1: Option<Ident> = None;
        loop {
            let c = p.peek_n(1);
            if v0.is_none() && p.peek::<Ident>()
                && p.to_atom::<CssAtomSet>(c) == CssAtomSet::Stable
            {
                v0 = Some(p.parse::<Ident>()?);
                continue;
            }
            if v1.is_none() && p.peek::<Ident>()
                && p.to_atom::<CssAtomSet>(c) == CssAtomSet::BothEdges
            {
                v1 = Some(p.parse::<Ident>()?);
                continue;
            }
            break;
        }
        if v0.is_none() {
            let c = p.peek_n(1);
            Err(::css_parse::Diagnostic::new(c, ::css_parse::Diagnostic::unexpected))?
        }
        return Ok(Self::Stable {
            stable: v0.unwrap(),
            both_edges: v1,
        });
    }
}
