crates/csskit_derives/src/test/snapshots/csskit_derives__test__test_parse__parse_enum_variant_discriminated_by_second_field_atom.snap
---
source: crates/csskit_derives/src/test/test_parse.rs
expression: pretty
---
#[automatically_derived]
impl<'a> ::css_parse::Parse<'a> for FlowInto {
    fn parse<I>(p: &mut css_parse::Parser<'a, I>) -> css_parse::Result<Self>
    where
        I: ::std::iter::Iterator<Item = ::css_parse::Cursor> + ::std::clone::Clone,
    {
        use css_parse::{Parse, Peek};
        if p.peek::<Ident>() {
            let c = p.peek_n(1);
            match p.to_atom::<Atoms>(c) {
                Atoms::None => {
                    let v0 = p.parse::<Ident>()?;
                    return Ok(Self::None { 0: v0 });
                }
                _ => {}
            }
        }
        if p.peek::<CustomIdent>() {
            let v0 = p.parse::<CustomIdent>()?;
            if p.peek::<Ident>() {
                let c = p.peek_n(1);
                match p.to_atom::<Atoms>(c) {
                    Atoms::Element => {
                        let v1 = p.parse::<Ident>()?;
                        return Ok(Self::WithElement { 0: v0, 1: v1 });
                    }
                    Atoms::Content => {
                        let v1 = p.parse::<Ident>()?;
                        return Ok(Self::WithContent { 0: v0, 1: v1 });
                    }
                    _ => {}
                }
            }
            return Ok(Self::Bare { 0: v0 });
        }
        return Err(
            ::css_parse::Diagnostic::new(
                p.peek_n(1),
                ::css_parse::Diagnostic::unexpected,
            ),
        )?;
    }
}
