crates/csskit_derives/src/test/snapshots/csskit_derives__test__test_parse__parse_enum_variant_with_all_must_occur.snap
---
source: crates/csskit_derives/src/test/test_parse.rs
expression: pretty
---
#[automatically_derived]
impl<'a> ::css_parse::Parse<'a> for Value {
    fn parse<I>(p: &mut css_parse::Parser<'a, I>) -> css_parse::Result<Self>
    where
        I: ::std::iter::Iterator<Item = ::css_parse::Cursor> + ::std::clone::Clone,
    {
        use css_parse::{Parse, Peek};
        if p.peek::<String>() {
            let v0 = p.parse::<String>()?;
            return Ok(Self::Normal { 0: v0 });
        }
        let mut v0: Option<AutoKeyword> = None;
        let mut v1: Option<Length> = None;
        loop {
            let c = p.peek_n(1);
            if v0.is_none() && p.peek::<AutoKeyword>() {
                v0 = Some(p.parse::<AutoKeyword>()?);
                continue;
            }
            if v1.is_none() && p.peek::<Length>() {
                v1 = Some(p.parse::<Length>()?);
                continue;
            }
            break;
        }
        if v0.is_none() || v1.is_none() {
            let c = p.peek_n(1);
            Err(::css_parse::Diagnostic::new(c, ::css_parse::Diagnostic::unexpected))?
        }
        return Ok(Self::Complex {
            auto: v0.unwrap(),
            length: v1.unwrap(),
        });
    }
}
