crates/csskit_derives/src/test/snapshots/csskit_derives__test__test_parse__parse_enum_variant_with_keyword_pattern.snap
---
source: crates/csskit_derives/src/test/test_parse.rs
expression: pretty
---
#[automatically_derived]
impl<'a> ::css_parse::Parse<'a> for TestEnum {
    fn parse<I>(p: &mut css_parse::Parser<'a, I>) -> css_parse::Result<Self>
    where
        I: ::std::iter::Iterator<Item = ::css_parse::Cursor> + ::std::clone::Clone,
    {
        use css_parse::{Parse, Peek};
        if p.peek::<NoneValue>() {
            let c = p.peek_n(1);
            match p.to_atom::<FooKeywords>(c) {
                FooKeywords::None => {
                    let v0 = p.parse::<NoneValue>()?;
                    let v1 = p.parse::<Length>()?;
                    return Ok(Self::WithKeyword {
                        none_value: v0,
                        other_field: v1,
                    });
                }
                _ => {}
            }
        }
        if p.peek::<String>() {
            let v0 = p.parse::<String>()?;
            return Ok(Self::Normal { 0: v0 });
        }
        return Err(
            ::css_parse::Diagnostic::new(
                p.peek_n(1),
                ::css_parse::Diagnostic::unexpected,
            ),
        )?;
    }
}
