crates/csskit_derives/src/test/snapshots/csskit_derives__test__test_parse__parse_enum_variant_with_keyword_variants_or_type.snap
---
source: crates/csskit_derives/src/test/test_parse.rs
expression: pretty
---
#[automatically_derived]
impl<'a> ::css_parse::Parse<'a> for NewtypeEnum {
    fn parse<I>(p: &mut css_parse::Parser<'a, I>) -> css_parse::Result<Self>
    where
        I: ::std::iter::Iterator<Item = ::css_parse::Cursor> + ::std::clone::Clone,
    {
        use css_parse::{Parse, Peek};
        if p.peek::<Ident>() {
            let c = p.peek_n(1);
            match p.to_atom::<Keyword>(c) {
                Keyword::Foo => {
                    let v0 = p.parse::<Ident>()?;
                    return Ok(Self::Foo { 0: v0 });
                }
                Keyword::Bar => {
                    let v0 = p.parse::<Ident>()?;
                    return Ok(Self::Bar { 0: v0 });
                }
                _ => {}
            }
        }
        if p.peek::<Length>() {
            let v0 = p.parse::<Length>()?;
            return Ok(Self::Length { 0: v0 });
        }
        return Err(
            ::css_parse::Diagnostic::new(
                p.peek_n(1),
                ::css_parse::Diagnostic::unexpected,
            ),
        )?;
    }
}
