crates/csskit_derives/src/test/snapshots/csskit_derives__test__test_parse__parse_enum_variant_with_newtype_keyword.snap
---
source: crates/csskit_derives/src/test/test_parse.rs
expression: pretty
---
#[automatically_derived]
impl<'a> ::css_parse::Parse<'a> for NewtypeEnum {
    fn parse(p: &mut css_parse::Parser<'a>) -> css_parse::Result<Self> {
        use css_parse::Parse;
        if p.peek::<String>() {
            let f0 = p.parse::<String>()?;
            Ok(Self::Simple { 0: f0 })
        } else {
            let auto_value = p.parse::<Auto>()?;
            let other = p.parse::<Length>()?;
            Ok(Self::WithNewtype {
                auto_value: auto_value,
                other: other,
            })
        }
    }
}
