crates/csskit_derives/src/test/snapshots/csskit_derives__test__test_parse__parse_enum_with_lifetime.snap
---
source: crates/csskit_derives/src/test/test_parse.rs
expression: pretty
---
#[automatically_derived]
impl<'a> ::css_parse::Parse<'a> for CssValue<'a> {
    fn parse<I>(p: &mut css_parse::Parser<'a, I>) -> css_parse::Result<Self>
    where
        I: ::std::iter::Iterator<Item = ::css_parse::Cursor> + ::std::clone::Clone,
    {
        use css_parse::{Parse, Peek};
        if p.peek::<String>() {
            let v0 = p.parse::<String>()?;
            if p.peek::<Vec<String>>() {
                let v1 = p.parse::<Vec<String>>()?;
                return Ok(Self::Function {
                    name: v0,
                    args: v1,
                });
            }
            return Ok(Self::Keyword { 0: v0 });
        }
        if p.peek::<Length>() {
            let v0 = p.parse::<Length>()?;
            return Ok(Self::Length { 0: v0 });
        }
        return Err(
            ::css_parse::Diagnostic::new(
                p.peek_n(1),
                ::css_parse::Diagnostic::unexpected,
            ),
        )?;
    }
}
