crates/csskit_derives/src/test/snapshots/csskit_derives__test__test_parse__parse_enum_with_range_validation.snap
---
source: crates/csskit_derives/src/test/test_parse.rs
expression: pretty
---
#[automatically_derived]
impl<'a> ::css_parse::Parse<'a> for Value {
    fn parse(p: &mut css_parse::Parser<'a>) -> css_parse::Result<Self> {
        use css_parse::{Parse, Peek};
        if p.peek::<Number>() {
            let f0 = p.parse::<Number>()?;
            if let Some(i) = ::css_parse::ToNumberValue::to_number_value(&f0) {
                if !(0..=100).contains(&i) {
                    use ::css_parse::ToSpan;
                    Err(
                        crate::diagnostics::NumberOutOfBounds(
                            i,
                            format!("{}..={}", 0, 100),
                            f0.to_span(),
                        ),
                    )?
                }
            }
            Ok(Self::Percentage { 0: f0 })
        } else {
            let f0 = p.parse::<Number>()?;
            if let Some(i) = ::css_parse::ToNumberValue::to_number_value(&f0) {
                if 0.1 > i {
                    use ::css_parse::ToSpan;
                    Err(crate::diagnostics::NumberTooSmall(0.1, f0.to_span()))?
                }
            }
            Ok(Self::Scale { 0: f0 })
        }
    }
}
